--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Ajedrez Para Todos was my first web project, so maybe it contains a lot of mistakes, bugs, and the design, being completely honest, is poor.
-Anyway, it was designed during a 7 classes course so I'm really happy with the result. I trust in this project, as soon as I can I will add 
-some features like a login, a test for deciding the user's level and give puzzles according to, a better design, and then try to keep all updated.
+Ajedrez Para Todos was my first web project devoloped some months ago, so maybe it contains a lot of mistakes, bugs, and the design, being completely honest, is poor.
+Anyway, it was designed during a 7 classes course so I'm really happy with the result considering I didn't know anything about web developing at the very first moment I began. I trust in this project, as soon as I can I will add 
+some features like a login, a test for deciding the user's level and give puzzles according to, a better design, etc. and then try to keep all updated.
+
 
